add facebook link

--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ theme = "hugo-theme-nix"
   #CodepenID = "your_codepen"
   #LinkedInID = "your_linkedin"
   #GoogleplusID = "your_googleplus"
-  #FacebookID = "your_facebook"
+  FacebookID = "499195467115318"
   Name = "ColumbiaSC-Tech"
   HeaderUsername = "tech"
   HeaderHostname = "cola"
